@@ -34,7 +34,7 @@
         <slf4j.version>2.0.16</slf4j.version>
         <junit.version>5.11.0</junit.version>
         <assertj.version>3.26.3</assertj.version>
-        <mockito.version>5.14.1</mockito.version>
+        <mockito.version>5.15.2</mockito.version>
 
         <!-- Plugin Versions -->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
@@ -131,6 +131,12 @@
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.15.11</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -153,7 +159,17 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>
+                            --enable-preview
+                            -XX:+EnableDynamicAgentLoading
+                            -Dnet.bytebuddy.experimental=true
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.util.function=ALL-UNNAMED
+                            --add-opens java.management/javax.management=ALL-UNNAMED
+                            --add-opens java.management/javax.management.remote=ALL-UNNAMED
+                            --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
